syntax = "proto3";

package agglayer.node.types.v1;

// Epoch configuration type.
message EpochConfiguration {
  // The genesis block of the epoch.
  uint64 genesis_block = 1;
  // The epoch duration.
  uint64 epoch_duration = 2;
}
